fix(nav): hide horizontal scroll on firefox

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,4 +10,5 @@ html, body {
   }
 
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
